--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
 }
+h1 {
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+.mycontainer {
+  margin: 0px 10px 10px 10px;
+  padding: 15px;
+  border-radius: 12px;
+  background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1));
+  text-align: -webkit-center;
+}
+.form-control {
+  width: 36%;
+  border: outset 2px #007bff;
+}
+.readonly {
+  caret-color: white;
+  border: outset 2px #dc3545;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+}
+.readonly::placeholder {
+  color: black;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
