--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,46 @@ h1 {
   margin-top: 100px;
   margin-bottom: 50px;
 }
+label {
+  color: black;
+}
+.hr2 {
+  background-image: linear-gradient(to right, rgba(255, 248, 220, 0), rgba(255, 248, 220, 1), rgba(255, 248, 220, 0));
+}
+.bull {
+  color: cornsilk;
+  line-height: 32px;
+}
+.row2 {
+  display: inline-flex;
+}
+.text2 {
+  font-family: serif;
+  background: -webkit-linear-gradient(rgb(59, 59, 59), rgb(233, 233, 233));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#mycontainer {
+  margin: 0px 10px 10px 10px;
+  padding: 15px;
+  border-radius: 12px;
+  background-image: linear-gradient(to right, rgba(255, 248, 220, 0), rgba(255, 248, 220, 1), rgba(255, 248, 220, 0));
+  text-align: -webkit-center;
+}
 .mycontainer {
   margin: 0px 10px 10px 10px;
   padding: 15px;
   border-radius: 12px;
-  background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,1));
+  background-image: linear-gradient(to right, rgba(255, 248, 220, 0), rgba(255, 248, 220, 1), rgba(255, 248, 220, 0));
   text-align: -webkit-center;
+}
+#complete {
+  margin: 0px 10px 10px 10px;
+  padding: 15px;
+  border-radius: 12px;
+  background-image: linear-gradient(to right, rgba(0,123,255,0), rgb(0, 123, 255, 1), rgba(0,123,255,0));
+  text-align: -webkit-center;
+  content: "COMPLETE";
 }
 .form-control {
   width: 36%;
@@ -19,11 +53,17 @@ h1 {
 .readonly {
   caret-color: white;
   border: outset 2px #dc3545;
-
 }
 .readonly::placeholder {
   color: black;
   text-align: center;
+}
+.line::placeholder {
+  color: rgb(153, 153, 153);
+  text-align: center;
+  text-decoration: line-through;
+  text-decoration-color: red;
+  text-decoration-style: wavy;
 }
 
 
